#4137 Fix scrollbar in sftp can not drag to scroll issue

--- a/src/client/components/sftp/sftp.styl
+++ b/src/client/components/sftp/sftp.styl
@@ -66,7 +66,7 @@
   .sftp-item
     position absolute
     left 0
-    right 0
+    right 10px
     bottom 0
     top 0
     z-index 1
